# resume-generator

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
resources/: resume.json
src/resume_generator/: resume_generator.py
