[project]
name = "resume-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Brian Tambara",email = "btambara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "reportlab>=4.4.0"
]

[tool.poetry]
packages = [{include = "resume_generator", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
